# orange-hrm-playwright-python

./: pyproject.toml
.github/workflows/: e2e.yml
pages/: login_page.py  personal_details_page.py  pim_page.py
tests/: conftest.py
tests/e2e/: test_add_employee.py  test_pim_employee_search.py
